redirect to login page if not loged in while visiting class page

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "estudy-client",
-	"version": "0.1.0",
+	"version": "1.0.0",
 	"private": true,
 	"dependencies": {
 		"@emotion/react": "^11.4.1",
@@ -16,8 +16,7 @@
 		"react-dom": "^17.0.2",
 		"react-router-dom": "^5.2.0",
 		"react-scripts": "4.0.3",
-		"sass": "^1.42.1",
-		"web-vitals": "^1.0.1"
+		"sass": "^1.42.1"
 	},
 	"scripts": {
 		"start": "react-scripts start",
@@ -38,9 +37,9 @@
 			"not op_mini all"
 		],
 		"development": [
-			"last 1 chrome version",
-			"last 1 firefox version",
-			"last 1 safari version"
+			"last 5 chrome version",
+			"last 5 firefox version",
+			"last 5 safari version"
 		]
 	}
 }
